<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PickMyTickets">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:tabGravity="fill"
        app:tabTextColor="#FFF"
        app:tabSelectedTextColor="@color/colorAccent"
        />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>