<resources>
    <string name="app_name">Powerball-MegaMillions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lottery Tools</string>
    <string name="nav_header_subtitle">Powerball, Megamillions, and Simulation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_tickets">My Tickets</string>
    <string name="past">Past Results</string>
    <string name="powerball">Powerball</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="megamillions">Mega Millions</string>
    <string name="none">None</string>
...
